<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    tools:context=".MainActivity">
    
    <ImageView
        android:id="@+id/ivhomeimg"
        android:layout_width="258dp"
        android:layout_height="261dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        tools:ignore="ContentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/clock_application"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivhomeimg" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_waits_for_no_one"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1" />
    
    <Button
        android:id="@+id/btnget"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="70dp"
        android:background="#212"
        android:text="@string/get_started"
        app:fontFamily="serif-monospace"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp" />

    <Button
        android:id="@+id/btnexit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="28dp"
        android:background="#212"
        android:text="@string/exit"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:text="@string/app_by_sulav"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1" />

</androidx.constraintlayout.widget.ConstraintLayout>