<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="176dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="662dp"
        android:alpha="0.5"
        android:gravity="center_horizontal"
        android:text="@string/alarm"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivclockimg"
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="364dp"
        android:src="@drawable/img"
        tools:ignore="ContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginLeft="-20dp" />

    <Button
        android:id="@+id/btnAlarmSet"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="303dp"
        android:background="#212"
        app:fontFamily="monospace"
        android:text="@string/set_alarm"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hrEditText"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="248dp"
        android:hint="@string/enter_hour"
        android:inputType="number"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/minEditText"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="185dp"
        android:hint="@string/enter_minute"
        android:inputType="number"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="209dp"
        android:layout_marginLeft="209dp"
        android:layout_marginBottom="107dp"
        android:background="#212"
        app:fontFamily="monospace"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>